# MEZO-Model-Server

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.runpod  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: benchmark.yml  build-image.yml  ci.yml  image-scan.yml  security.yml
benchmarks/: README.md  latency.py
docs/: api-contract.md  gpu-profiles.md
models/: qwen3-coder-next.env  registry.json
models/quantization/: README.md
runpod/: README.md  endpoint-config.example.json  handler.py  start.sh
scripts/: healthcheck.py  smoke_test.py  tool_call_test.py  verify_registry.py
src/mezo_model_server/: __init__.py  command.py  config.py  errors.py  launcher.py  registry.py
tests/: __init__.py  test_command.py  test_config.py  test_registry.py
