[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mezo-model-server"
version = "0.1.0"
description = "Deterministic secure launcher and deployment assets for Qwen on vLLM"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
  "mypy>=1.17,<2",
  "pytest>=8.4,<9",
  "ruff>=0.12,<1",
]
benchmark = ["httpx>=0.28,<1"]
runpod = ["httpx>=0.28,<1", "runpod>=1.7,<2"]

[project.scripts]
mezo-model-launch = "mezo_model_server.launcher:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "S"]
ignore = ["S603", "S607"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
